--- a/css/style.css
+++ b/css/style.css
@@ -298,7 +298,6 @@ height: 35px;
     margin: 0;
     padding: 0;
     padding: 0 17px;
-    /* padding-top: 5px; */
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
 
@@ -437,7 +436,7 @@ height: 35px;
         flex-wrap: wrap;
 }
 
-.main-nav h2,
+.main-nav .main-nav-headline,
 .header-service a {
     font-family: inherit;
     font-size: 18px;
@@ -452,6 +451,8 @@ height: 35px;
 
     width: 300px;
     margin: 0;
+    padding: 0;
+    margin-top: -3px;
     margin-right: 240px;
     margin-bottom: 24px;
 
@@ -482,15 +483,6 @@ height: 35px;
     height: 16px;
 
     background-color: #b9a974;
-}
-
-.main-nav h2:hover,
-.main-nav h2:focus {
-    opacity: 0.6;
-}
-
-.main-nav h2:active {
-    opacity: 0.3;
 }
 
 .main-nav ul {
@@ -991,7 +983,8 @@ height: 35px;
 }
 
 .icon-container:active::before,
-.index-cotalog-item a:active p {
+.index-cotalog-item:active p,
+.index-cotalog-item:active .icon-container::before {
     opacity: 0.3;
 }
 
@@ -1054,12 +1047,15 @@ height: 35px;
 }
 
 .button-service .button {
-    display: block;
     width: 100px;
-    padding-left: 0;
-    padding-right: 0;
+    padding-bottom: 10px;
 
-    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 24px;
+
+    border: none;
+    background-color: rgba(0, 0, 0, 0);
 
     z-index: 1;
 }
@@ -1069,11 +1065,11 @@ height: 35px;
     opacity: 1;
 }
 
-.service-active a {
+.service-active button {
     color: #f7e296;
 }
 
-.service-active a::before {
+.service-active button::before {
     display: none;
 }
 
@@ -1260,6 +1256,14 @@ height: 35px;
     margin-bottom: 40px;
 }
 
+.info-contacts .map {
+    display: block;
+    width: 560px;
+    height: 222px;
+
+    background-color: #e9e9e9;
+}
+
 .delevery {
     margin: 0;
     padding: 0;
@@ -1419,7 +1423,7 @@ height: 35px;
 }
 
 .filter-catalog h3,
-.catalog-sorting h3{
+.catalog-sorting h3 {
     position: relative;
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
